--- a/sh/css/main.css
+++ b/sh/css/main.css
@@ -33,6 +33,31 @@ pre{
     line-height: 1.6;
 }
 
+table {
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+}
+
+.red {
+    color: red;
+}
+
+.green {
+    color: green;
+}
+
+.hor-divider {
+    width: 70%;
+    height: 5px;
+    background-color: #888888;
+    margin: 0 5px;
+}
+
 
 
 
