--- a/css/media.css
+++ b/css/media.css
@@ -55,5 +55,24 @@
     .nav-button {
         z-index: 2;
     }
+}
 
+@media (max-width: 500px) {
+    .foto {
+        width: 250px;
+        height: 250px;
+        border: 5px solid #ff5e00;
+    }
+
+    .label-1 {
+        font-size: 25px;
+    }
+
+    body{
+        font-size: 12px;
+    }
+
+    .chapter-label {
+        font-size: 20px;
+    }
 }
