--- a/css/media.css
+++ b/css/media.css
@@ -50,9 +50,11 @@
     .nav-button {
         z-index: 2;
     }
-}
 
-@media (max-width: 500px) {
+    .image-container {
+        height: 400px;   
+    }
+
     .foto {
         width: 250px;
         height: 250px;
