--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @import "./reset.css";
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap');
 
 body{
     font-family: 'JetBrains Mono', monospace;
@@ -69,7 +69,7 @@ body{
 
 .nav-link {
     font-weight: 600;
-    font-size: 16px;
+    font-size: 18px;
     color: #A9B7C6;
     padding: 15px;
     transition: background-color 0.3s;
